# QA_GURU_BELEVTSEVA_HW_20

./: .env.bstack  .env.local_emulator  .env.local_real  .gitignore  README.md  pyproject.toml
allure-results/: 59c0d2df-efa3-4525-b632-28719bf3a004-result.json  a87b8321-ca93-48db-b850-6ee8a150a262-attachment.xml  ebe433ac-57b3-4ba1-8345-b83702181425-container.json
selene_in_action/utils/: attach.py  settings.py
tests/: conftest.py  test_android_onboarding.py
tests/test_android_app/: test_android_wikipedia.py  test_open_article.py
